k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-web
spec:
  selector:
    matchLabels:
      app: parksmap-web
  template:
    metadata:
      labels:
        app: parksmap-web
    spec:
      containers:
        - name: parksmap-web
          image: parksmap-web/image
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 100
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 100
