k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's http service.
    argocd.argoproj.io/sync-options: Validate=false
  labels:
    application: parksmap-web
    app: workshop
    component: parksmap-web
    role: frontend
    app.kubernetes.io/name: spring
  name: parksmap-web
spec:
  to:
    name: parksmap-web
    kind: Service
  tls:
    termination: edge
